# medrisk-ai

./: .coveragerc.ml  .dockerignore  .env.example  .gitignore  .secrets.baseline  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.inference  Dockerfile.ml  LICENSE  README.md  SECURITY.md  alembic.ini  compose.inference.yaml  compose.yaml  pyproject.toml  pytest.ml.ini  render.yaml  requirements-dev.txt  requirements-inference.txt  requirements-ml-dev.txt  requirements-ml.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 01bcb6f81802_add_model_deployments_and_inference_.py  4b5e1ce5a386_add_research_evaluation_platform.py  6936f012d734_create_initial_schema.py  c213979b1b21_add_dataset_registry.py
app/: __init__.py  main.py
app/api/: dependencies.py  router.py
app/core/: config.py  constants.py  exceptions.py  logging.py  rate_limit.py  security.py
app/db/: base.py  session.py
app/middleware/: request_id.py
app/models/: __init__.py  dataset.py  dataset_audit.py  dataset_sample.py  evaluation.py  mixins.py  model_deployment.py  prediction.py  refresh_token.py  research_study.py  user.py
app/repositories/: dataset.py  model_deployment.py  prediction.py  refresh_token.py  user.py
app/research/: __init__.py
app/schemas/: auth.py  common.py  dataset.py  model_deployment.py  prediction.py  user.py
app/services/: auth.py  dataset.py  model_deployment.py  prediction.py
configs/ml/: baseline_cnn.yaml  resnet18.yaml  smoke.yaml
docker/postgres/: init.sql
docs/: DATABASE_RELEASE_AND_ROLLBACK.md  DATA_AND_MODEL_PROVENANCE.md  DEPLOYMENT.md  KNOWN_LIMITATIONS.md  OPERATIONS_RUNBOOK.md  PHASE_7_PROGRESS.md  PHASE_8_PROGRESS.md  PORTFOLIO_CASE_STUDY.md  PRODUCT_WALKTHROUGH.md  RESEARCH_METHODOLOGY.md  SECURITY_AUDIT.md  THREAT_MODEL.md  api-contract.md  architecture.md  database.md  dataset-card-pcam.md  development.md  evaluation.md  experiment-protocol.md  explainability.md  image-input-contract.md  inference-architecture.md  inference-security.md  ml-architecture.md  model-card-template.md  model-deployment.md  project-scope.md  security.md
docs/decisions/: ADR-001-backend-architecture.md
docs/learning/: phase-01-backend-foundation.md  phase-02-histopathology-ml.md  phase-03-inference-api.md
frontend/: .env.example  .gitignore  .prettierignore  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/scripts/: export-openapi.mjs
frontend/src/: main.tsx  vite-env.d.ts
medrisk_inference/: __init__.py  bundle.py  cli.py  config.py  constants.py  decision.py  exceptions.py  explanation.py  image_validation.py  preprocessing.py  runtime.py  service.py  types.py  utils.py
medrisk_ml/: __init__.py  cli.py  config.py  constants.py  types.py
medrisk_ml/data/: datasets.py  download.py  loaders.py  metadata.py  statistics.py  synthetic.py  transforms.py
medrisk_ml/evaluation/: calibration.py  error_analysis.py  evaluator.py  metrics.py  plots.py  thresholding.py
medrisk_ml/explainability/: gradcam.py  hooks.py  visualization.py
medrisk_ml/models/: baseline_cnn.py  factory.py  resnet.py
medrisk_ml/registry/: bundle.py  manifest.py  registry.py
medrisk_ml/training/: checkpointing.py  early_stopping.py  engine.py  losses.py  optimizer.py  scheduler.py  trainer.py
medrisk_ml/utils/: device.py  hashing.py  logging.py  reproducibility.py  timing.py
medrisk_research/: __init__.py  cli.py
research/: references.yaml
research/studies/: synthetic_demo.yaml
scripts/: check.py  dev.ps1  dev.sh  promote_superuser.py  render_start.sh  seed_dataset.py  seed_dev_user.py  wait_for_db.py
scripts/ml/: download_pcam.py  evaluate.py  explain.py  inspect_dataset.py  register_model.py  train.py  verify_bundle.py
tests/: conftest.py
tests/inference/: conftest.py  test_bundle.py  (+8 more)
(+153 files in other folders)
